Fixes #2418 plus some white space clean up
git-svn-id: https://buddypress.svn.wordpress.org/branches/1.2@3089 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-xprofile/admin/css/admin.css
+++ b/bp-xprofile/admin/css/admin.css
@@ -9,17 +9,13 @@ table.field-group tbody tr:hover {
 	background-color: #fffee9;
 }
 	
-tr.header td {
+table.field-group tr.header td {
 	border-bottom: 2px solid #eee;
 	font-weight: bold;
 }
 
 tr.core td { color: #999; }
 
-thead tr th {
-	font-size: 16px;
-}
-	
 	ul.forTab {
 		list-style: none;
 		padding: 0;
@@ -39,7 +35,7 @@ thead tr th {
 			}
 	
 	p.success { background: green;}
-	p.err { 
+	p.err {
 		border-top: 2px solid red;
 		border-bottom: 2px solid red;
 		color: red;
@@ -53,24 +49,24 @@ thead tr th {
 		color: #555;
 	}
 
-	select.multi-select{
-	    width:90%;
-    	height:10em !important;
+	select.multi-select {
+		width:90%;
+		height:10em !important;
 	}
 
 ul.multi-checkbox {
-    margin: 0 5px 0 0px;
-    padding: .5em .9em;
-    height: 10em;
-    overflow: auto;
-    list-style: none;
-    border: solid 1px #ccc;
-    width:90%;           
+	margin: 0 5px 0 0px;
+	padding: .5em .9em;
+	height: 10em;
+	overflow: auto;
+	list-style: none;
+	border: solid 1px #ccc;
+	width: 90%;
 }
 
-ul.multi-checkbox li{
-    padding: 0;
-    margin: 0;
+ul.multi-checkbox li {
+	padding: 0;
+	margin: 0;
 }
 
 div.options-box {
